fixed copy button wrapping

--- a/src/plugins/CopyImageLink/styles.css
+++ b/src/plugins/CopyImageLink/styles.css
@@ -1,5 +1,6 @@
 .copyBtn {
 	left: 95px;
+	white-space: nowrap;
 }
 
 .copyBtnSpan {
